--- a/index.html
+++ b/index.html
@@ -19,73 +19,77 @@
   <body>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-button" type="button" data-modal-close>
-          <svg class="close-icon" width="18" height="18">
+        <button
+          class="modal-button modal__button"
+          type="button"
+          data-modal-close
+        >
+          <svg class="close-icon modal__icon--close" width="18" height="18">
             <use href="./images/modalclose.svg#icon-modalclose-1"></use>
           </svg>
         </button>
         <div class="modal-form-container">
-          <p class="modal-form-title">
-            Оставьте свои данные, мы вам перезвоним
-          </p>
           <form class="modal-form">
+            <p class="modal-form-title modal-form__title">
+              Оставьте свои данные, мы вам перезвоним
+            </p>
             <label
-              class="modal-form-name-label modal-form-label"
+              class="modal-form-name-label modal-form-label modal-form__label"
               for="user-name"
               >Имя</label
             >
             <div class="modal-form-name-input-container">
               <input
-                class="modal-form-name-input modal-form-input"
+                class="modal-form-name-input modal-form-input modal-form__input"
                 type="text"
                 name="name"
                 id="user-name"
                 autocomplete="on"
               />
-              <svg class="modal-form-name-icon" width="18" height="18">
+              <svg class="modal-form-name-icon modal-form__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
-            <label class="modal-form-tel-label modal-form-label" for="user-tel"
+            <label class="modal-form-tel-label modal-form-label modal-form__label" for="user-tel"
               >Телефон</label
             >
             <div class="modal-form-tel-input-container">
               <input
-                class="modal-form-tel-input modal-form-input"
+                class="modal-form-tel-input modal-form-input modal-form__input"
                 type="tel"
                 name="tel"
                 id="user-tel"
                 autocomplete="on"
               />
-              <svg class="modal-form-tel-icon" width="18" height="18">
+              <svg class="modal-form-tel-icon modal-form__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
             <label
-              class="modal-form-mail-label modal-form-label"
+              class="modal-form-mail-label modal-form-label modal-form__label"
               for="user-mail"
               >Почта</label
             >
             <div class="modal-form-mail-input-container">
               <input
-                class="modal-form-mail-input modal-form-input"
+                class="modal-form-mail-input modal-form-input modal-form__input"
                 type="email"
                 name="email"
                 id="user-mail"
                 autocomplete="on"
               />
-              <svg class="modal-form-mail-icon" width="18" height="18">
+              <svg class="modal-form-mail-icon modal-form__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
 
             <label
-              class="modal-form-comment-label modal-form-label"
+              class="modal-form-comment-label modal-form-label modal-form__label"
               for="user-comment"
               >Комментарий</label
             >
             <textarea
-              class="modal-form-comment-area modal-form-input"
+              class="modal-form-comment-area modal-form-input modal-form__input"
               name="comment"
               id="user-comment"
               cols="30"
@@ -94,7 +98,7 @@
             ></textarea>
             <div class="modal-form-policy-container">
               <input
-                class="modal-form-policy-checkbox"
+                class="modal-form-policy-checkbox modal-form__input"
                 type="checkbox"
                 name="policy"
                 id="policy"
