Добавляет завершение оформления сасс

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 name="name"
                 id="user-name"
                 autocomplete="on"
+                placeholder="Имя Фамилия"
                 required
               />
               <svg class="modal-form__icon--name" width="18" height="18">
